--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Instalatori Brasov. Servicii de instalatii
+title: Instalatori Brasov. Servicii de instalatii sanitare, de canalizare si panouri solare
 baseurl: ""
 slogan: Tineri, dinamici, profesionisti
 email: contact@quick-install.ro
